LOOKS: Ensure comments appear correctly on mobile

--- a/src/app/tasks/task-comments-viewer/task-comments-viewer.scss
+++ b/src/app/tasks/task-comments-viewer/task-comments-viewer.scss
@@ -7,16 +7,15 @@
 }
 
 .wrapword {
--ms-word-break: break-all;
-    word-break: break-all;
+  -ms-word-break: break-all;
+  word-break: break-all;
 
- /* Non standard for webkit */
-     word-break: break-word;
-
-    -webkit-hyphens: auto;
-       -moz-hyphens: auto;
-        -ms-hyphens: auto;
-            hyphens: auto;
+  /* Non standard for webkit */
+  word-break: break-word;
+  -webkit-hyphens: auto;
+  -moz-hyphens: auto;
+  -ms-hyphens: auto;
+  hyphens: auto;
 }
 
 .noselect {
@@ -30,6 +29,8 @@
 
 .task-comments-viewer .comment {
   display: flex;
+  margin-left: 0;
+  width: 100%;
   margin-bottom: 1em;
   .comment-details {
     position: relative;
@@ -64,7 +65,8 @@
       box-shadow: 0 0 0 1px #2196F3;
 
       margin-bottom: 2px;
-      align-self: bottom;
+      margin-right: 20px;
+      align-self: flex-end;
       color: white;
       text-align: center;
       font-size: 1em;
@@ -83,6 +85,9 @@
     padding: 0.5em;
     padding-left: 0;
     line-height: 1em;
+    align-items: center;
+    display: inherit;
+    height: 0%;
 
     .markdown-to-html > *:last-child {
       margin-bottom: 0px;
@@ -117,6 +122,7 @@ task-comments-viewer .panel-footer {
 
 .markdown-editor .markdown-editor-inner-context {
   border: 0;
+  width: 100%;
   box-shadow: none;
   border-radius: 0px 0px 4px 4px;
 }
@@ -125,5 +131,6 @@ task-comments-viewer .panel-footer {
   display: flex;
   .markdown-editor {
     padding: 0;
+    width: 100%;
   }
 }
